--- a/styles/mdx.css
+++ b/styles/mdx.css
@@ -52,9 +52,9 @@ code[data-theme*=" "] span {
   @apply mt-3 px-4 py-2 text-sm font-medium;
 }
 
-.mdx > .steps:first-child > h3:first-child {
+/* .mdx > .steps:first-child > h3:first-child {
   @apply mt-0;
-}
+} */
 
 .steps > h3 {
   @apply mb-4 mt-8 text-base font-semibold;
