--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,7 +54,7 @@
     --ring: 0 0% 3.9%;
     --radius: 0.5rem;
 
-    --chart-1:240 67% 94%;
+    --chart-1: 240 67% 94%;
     --chart-2: 303 59% 60%;
     --chart-3: 240 53% 58%;
     --chart-4: 300 100% 50%;
