--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,11 +25,12 @@
     --ring: 0 0% 3.9%;
     --radius: 0.5rem;
 
-    --chart-1: 271.5 81.3% 55.9%;
-    --chart-2: 270 95% 75%;
-    --chart-3: 270 91% 65%;
-    --chart-4: 269 97% 85%;
-    --chart-5: 269 100% 92%;
+    --chart-1: 299 89% 17%;
+    --chart-2: 303 59% 60%;
+    --chart-3: 240 53% 58%;
+    --chart-4: 300 100% 50%;
+    --chart-5: 271 76% 53%;
+    --chart-6: 282 92% 47%;
   }
 
   .light {
@@ -54,7 +55,7 @@
     --ring: 0 0% 3.9%;
     --radius: 0.5rem;
 
-    --chart-1: 240 67% 94%;
+    --chart-1: 299 89% 17%;
     --chart-2: 303 59% 60%;
     --chart-3: 240 53% 58%;
     --chart-4: 300 100% 50%;
@@ -84,13 +85,18 @@
     --ring: 0 0% 83.1%;
     --radius: 0.5rem;
 
-    --chart-1: 271.5 81.3% 55.9%;
-    --chart-2: 270 95% 75%;
-    --chart-3: 270 91% 65%;
-    --chart-4: 269 97% 85%;
-    --chart-5: 269 100% 92%;
-    --chart-6: 268 100% 95%;
-    --chart-7: 268 100% 100%;
+    /* --chart-1: 270 100% 50%;
+    --chart-2: 270 90% 55%;
+    --chart-3: 270 80% 60%;
+    --chart-4: 270 70% 65%;
+    --chart-5: 270 60% 70;
+    --chart-6: 270 50% 75%; */
+    --chart-1: 299 89% 17%;
+    --chart-2: 303 59% 60%;
+    --chart-3: 240 53% 58%;
+    --chart-4: 300 100% 50%;
+    --chart-5: 271 76% 53%;
+    --chart-6: 282 92% 47%;
   }
 }
 
